fix this weird gap on blog archive

--- a/src/css/blog-archive.css
+++ b/src/css/blog-archive.css
@@ -2,7 +2,7 @@
   display: grid;
   column-gap: 1em;
   row-gap: 0.25em;
-  grid-template-columns: 11ch 1fr;
+  grid-template-columns: auto 1fr;
   grid-template-areas: "date headline";
   padding: 0;
   margin: 0;
